# TradingTaxCalculator

./: CMakeLists.txt  asset.cpp  asset.h  asset_types.cpp  asset_types.h  capital_com_loader.cpp  capital_com_loader.h  capitalcom_asset_result_table_model.cpp  capitalcom_asset_result_table_model.h  macros.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  transaction.cpp  transaction.h  transaction_types.cpp  transaction_types.h
